# fl2json

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md
src/: ast.cpp  ast.hpp  lexer.cpp  lexer.hpp  main.cpp  parser.cpp  parser.hpp  token.cpp  token.hpp
tests/: decls.fl  flex.fl  funcs.fl  wc.fl
